Aquib Ahmad|Added setPasswordRoute
