# src/schema/userSchema.js
@@ -13,7 +13,7 @@ const addUserSchema = Joi.object()
 const loginSchema = Joi.object()
   .keys({
     email: Joi.string().min(3).max(30).required(),
-    password: Joi.string().min(8).max(50).required(),
+    password: Joi.string().min(1).max(50).required(),
   })
   .options({ abortEarly: false });
 
